Wed Dec 22 08:34:32 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/sym.c (rb_dlsym_initialize): extract internal pointers after
	  all argument conversion.  fixed: [ruby-dev:25271]

Wed Dec 22 00:08:01 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/soap/*, test/soap/*, sample/soap/authheader/*: eval cleanup.

Tue Dec 21 22:07:33 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_asn1.c (ossl_asn1_traverse, ossl_asn1_decode,
	  ossl_asn1_decode_all): temporary value should be marked volatile.

Tue Dec 21 14:40:02 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_asn1.c (ossl_asn1_traverse, ossl_asn1_decode,
	  ossl_asn1_decode_all): use rb_str_new4 to avoid SEGV.
	  fix [ruby-dev:25261]

	* test/openssl/test_asn1.rb: add tests for OpenSSL::ASN1.

Tue Dec 21 12:22:40 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_reopen): keep duplex pipe in correct mode for exception
	  safeness.  fixed: [ruby-dev:25152]

Tue Dec 21 12:10:04 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/grid.rb: rescue bug of 'grid configure' on Tcl/Tk8.3-

Tue Dec 21 00:53:01 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/openssl/ossl_asn1.c (ossl_asn1_traverse): [ruby-dev:25261]

	* ext/openssl/ossl_asn1.c (ossl_asn1_decode): ditto.

	* ext/openssl/ossl_asn1.c (ossl_asn1_decode_all): ditto.

Mon Dec 20 23:22:26 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* added files:
	  * lib/soap/mapping/wsdl*.rb
	  * lib/wsdl/soap/element.rb
	  * lib/wsdl/xmlSchema/simpleContent.rb

	* modified files:
	  * lib/soap/*
	  * lib/wsdl/*
	  * lib/xsd/*
	  * test/soap/*
	  * test/wsdl/*
	  * test/xsd/*
	  * sample/soap/*
	  * sample/sdl/*

	* summary
	  * imported from the soap4r repository.  Version: 1.5.3-ruby1.8.2

	  * added several XSD basetype support: nonPositiveInteger,
	    negativeInteger, nonNegativeInteger, unsignedLong, unsignedInt,
	    unsignedShort, unsignedByte, positiveInteger
